# write_config_path_to_project_root

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
src/write_config_path_to_project_root/: handler.py
tests/: handler_test.py
write_config_path_to_project_root/: __init__.py  handler.py  handler_test.py
